# python-demo

./: .gitignore  .pytest.ini  README.md  conftest.py  pyproject.toml  requirements.txt
src/spinner/: _halo.py  _spinner.py
syntax/: scenario.yml  schema.yml
tests/: .env  test_attrs.py  test_classes.py  test_context_manager.py  test_date_time.py  test_decorator.py  test_deep_merge.py  test_dotenv.py  test_exit.py  test_filter.py  test_flatten_dict.py  test_inspect.py  test_jinja2_template.py  test_json_schema.py  test_keepass.py  test_matplotlib.py  test_named_tuples.py  test_partial_function.py  test_path.py  test_pydantic.py  test_python_tricks.py  test_pyyaml.py  test_ruamel.py  test_string_formatting.py  test_syntax.py  test_thread.py  test_unsync.py
tests/playwright/: conftest.py
tests/playwright/tests/: test_playwright.py
tests/schema/: instance.yaml  instance_ordered.yaml  schema.yaml  schema_ordered.yaml
tests/template/: loop.json  simple.json
